--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -55,13 +55,13 @@
                                                         <table>
                                                             <tbody>
                                                             <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==1">
-                                                                <td>
-                                                                <span data-miid="{{ egunak._id }}"
+                                                                <td><div class="item-wrapper">
+                                                                <a href="#" data-miid="{{ egunak._id }}"
                                                                       data-fetxa="{{egunak.fetxa}}"
                                                                       data-turno="1"
                                                                       data-linea="1"
                                                                       editable-text="orden.ref"
-                                                                      onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
+                                                                      onbeforesave="updateUser($data, this)">{{ orden.ref }}</a></div>
                                                                 </td>
                                                             </tr>
                                                             <!--<tr><td ng-if="turnos.turno==1">+</td></tr>-->
@@ -70,13 +70,13 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td>
-                                                        <span data-miid="{{ egunak._id }}"
+                                                    <td><div class="item-wrapper">
+                                                        <a href="#" data-miid="{{ egunak._id }}"
                                                                 data-fetxa="{{egunak.fetxa}}"
                                                                 data-turno="1"
                                                                 data-linea="1"
                                                                 editable-text="orden.ref"
-                                                                onbeforesave="addData($data, this)">+</span>
+                                                                onbeforesave="addData($data, this)">+</a></div>
                                                     </td>
                                                 </tr>
                                             </table>
@@ -88,13 +88,13 @@
                                                         <table>
                                                             <tbody>
                                                             <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==2">
-                                                                <td>
-                                                                <span data-miid="{{ egunak._id }}"
+                                                                <td><div class="item-wrapper">
+                                                                <a href="#" data-miid="{{ egunak._id }}"
                                                                       data-fetxa="{{egunak.fetxa}}"
                                                                       data-turno="2"
                                                                       data-linea="1"
                                                                       editable-text="orden.ref"
-                                                                      onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
+                                                                      onbeforesave="updateUser($data, this)">{{ orden.ref }}</a></div>
                                                                 </td>
                                                             </tr>
                                                             <!--<tr><td ng-if="turnos.turno==2">+</td></tr>-->
@@ -103,13 +103,13 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td>
-                                                        <span data-miid="{{ egunak._id }}"
+                                                    <td><div class="item-wrapper">
+                                                        <a href="#" data-miid="{{ egunak._id }}"
                                                             data-fetxa="{{egunak.fetxa}}"
                                                             data-turno="2"
                                                             data-linea="1"
                                                             editable-text="orden.ref"
-                                                            onbeforesave="addData($data, this)">+</span>
+                                                            onbeforesave="addData($data, this)">+</a></div>
                                                     </td>
                                                 </tr>
                                             </table>
@@ -121,13 +121,13 @@
                                                         <table>
                                                             <tbody>
                                                             <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==3">
-                                                                <td>
-                                                                <span data-miid="{{ egunak._id }}"
+                                                                <td><div class="item-wrapper">
+                                                                <a href="#" data-miid="{{ egunak._id }}"
                                                                       data-fetxa="{{egunak.fetxa}}"
                                                                       data-turno="3"
                                                                       data-linea="1"
                                                                       editable-text="orden.ref"
-                                                                      onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
+                                                                      onbeforesave="updateUser($data, this)">{{ orden.ref }}</a></div>
                                                                 </td>
                                                             </tr>
                                                             <!--<tr><td ng-if="turnos.turno==3">+</td></tr>-->
@@ -136,13 +136,13 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td>
-                                                        <span data-miid="{{ egunak._id }}"
+                                                    <td><div class="item-wrapper">
+                                                        <a href="#" data-miid="{{ egunak._id }}"
                                                           data-fetxa="{{egunak.fetxa}}"
                                                           data-turno="3"
                                                           data-linea="1"
                                                           editable-text="orden.ref"
-                                                          onbeforesave="addData($data, this)">+</span>
+                                                          onbeforesave="addData($data, this)">+</a></div>
                                                     </td>
                                                 </tr>
                                             </table>
@@ -173,13 +173,13 @@
                                                     <table>
                                                         <tbody>
                                                         <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==1">
-                                                            <td>
-                                                                <span data-miid="{{ egunak._id }}"
+                                                            <td><div class="item-wrapper">
+                                                                <a href="#" data-miid="{{ egunak._id }}"
                                                                       data-fetxa="{{egunak.fetxa}}"
                                                                       data-turno="1"
                                                                       data-linea="2"
                                                                       editable-text="orden.ref"
-                                                                      onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
+                                                                      onbeforesave="updateUser($data, this)">{{ orden.ref }}</a></div>
                                                             </td>
                                                         </tr>
                                                         <!--<tr><td ng-if="turnos.turno==1">+</td></tr>-->
@@ -188,13 +188,13 @@
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <td>
-                                                        <span data-miid="{{ egunak._id }}"
+                                                <td><div class="item-wrapper">
+                                                        <a href="#" data-miid="{{ egunak._id }}"
                                                               data-fetxa="{{egunak.fetxa}}"
                                                               data-turno="1"
                                                               data-linea="2"
                                                               editable-text="orden.ref"
-                                                              onbeforesave="addData($data, this)">+</span>
+                                                              onbeforesave="addData($data, this)">+</a></div>
                                                 </td>
                                             </tr>
                                         </table>
@@ -206,13 +206,13 @@
                                                     <table>
                                                         <tbody>
                                                         <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==2">
-                                                            <td>
-                                                                <span data-miid="{{ egunak._id }}"
+                                                            <td><div class="item-wrapper">
+                                                                <a href="#" data-miid="{{ egunak._id }}"
                                                                       data-fetxa="{{egunak.fetxa}}"
                                                                       data-turno="2"
                                                                       data-linea="2"
                                                                       editable-text="orden.ref"
-                                                                      onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
+                                                                      onbeforesave="updateUser($data, this)">{{ orden.ref }}</a></div>
                                                             </td>
                                                         </tr>
                                                         <!--<tr><td ng-if="turnos.turno==2">+</td></tr>-->
@@ -221,13 +221,13 @@
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <td>
-                                                        <span data-miid="{{ egunak._id }}"
+                                                <td><div class="item-wrapper">
+                                                        <a href="#" data-miid="{{ egunak._id }}"
                                                               data-fetxa="{{egunak.fetxa}}"
                                                               data-turno="2"
                                                               data-linea="2"
                                                               editable-text="orden.ref"
-                                                              onbeforesave="addData($data, this)">+</span>
+                                                              onbeforesave="addData($data, this)">+</a></div>
                                                 </td>
                                             </tr>
                                         </table>
@@ -239,13 +239,13 @@
                                                     <table>
                                                         <tbody>
                                                         <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==3">
-                                                            <td>
-                                                                <span data-miid="{{ egunak._id }}"
+                                                            <td><div class="item-wrapper">
+                                                                <a href="#" data-miid="{{ egunak._id }}"
                                                                       data-fetxa="{{egunak.fetxa}}"
                                                                       data-turno="3"
                                                                       data-linea="2"
                                                                       editable-text="orden.ref"
-                                                                      onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
+                                                                      onbeforesave="updateUser($data, this)">{{ orden.ref }}</a></div>
                                                             </td>
                                                         </tr>
                                                         <!--<tr><td ng-if="turnos.turno==3">+</td></tr>-->
@@ -254,13 +254,13 @@
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <td>
-                                                        <span data-miid="{{ egunak._id }}"
+                                                <td><div class="item-wrapper">
+                                                        <a href="#" data-miid="{{ egunak._id }}"
                                                               data-fetxa="{{egunak.fetxa}}"
                                                               data-turno="3"
                                                               data-linea="2"
                                                               editable-text="orden.ref"
-                                                              onbeforesave="addData($data, this)">+</span>
+                                                              onbeforesave="addData($data, this)">+</a></div>
                                                 </td>
                                             </tr>
                                         </table>
