--- a/static/pages/setting.html
+++ b/static/pages/setting.html
@@ -19,7 +19,7 @@
 
     	<div class="row" ng-repeat="s in mysettings">
     		<div class="col-md-4">
-    			<div colorpicker class="col-header">{{s.ref}}</div>
+    			<div class="col-header">{{s.ref}}</div>
 
     		</div>
     		<div class="col-md-4">
@@ -29,7 +29,7 @@
                 </div>
     		</div>
     		<div class="col-md-4">
-    			<div class="col-header"><span style="display:block; border:1px solid #ccc; background-color:{{ s.forecolor }}; width:100px; height:20px;">&nbsp;</span></div>
+    			<div colorpicker class="col-header"><span style="display:block; border:1px solid #ccc; background-color:{{ s.forecolor }}; width:100px; height:20px;">&nbsp;</span></div>
     		</div>
     	</div>
     </div>
