--- a/static/pages/setting.html
+++ b/static/pages/setting.html
@@ -5,33 +5,46 @@
 <div id="linea1" class="row">
 	<div class="col-md-2"></div>
     <div class="col-md-8">
-    	<div class="row">
-    		<div class="col-md-4">
-    			<div class="col-header">Referencia:</div>
-    		</div>
-    		<div class="col-md-4">
-    			<div class="col-header">Color fondo:</div>
-    		</div>
-    		<div class="col-md-4">
-    			<div class="col-header">Color texto:</div>
-    		</div>
-    	</div>
 
-    	<div class="row" ng-repeat="s in mysettings">
-    		<div class="col-md-4">
-    			<div class="col-header">{{s.ref}}</div>
+        <form editable-form name="tableform" onaftersave="saveTable()" oncancel="cancel()">
 
-    		</div>
-    		<div class="col-md-4">
-    			<div class="col-header">
-                    <span colorpicker style="display:block; background-color:{{ s.backcolor }}; width:100px; height:20px;" ng-model="s.backcolor">&nbsp;</span>
+            <!-- table -->
+            <table class="table table-bordered table-hover table-condensed">
+                <tr style="font-weight: bold">
+                    <td style="width:40%">Referencia</td>
+                    <td style="width:30%">Color fondo</td>
+                    <td style="width:30%">Color texto</td>
+                    <td style="width:30%"><span ng-show="tableform.$visible">Acciones</span></td>
+                </tr>
+                <tr ng-repeat="user in users | filter:filterUser">
+                    <td>
+                        <!-- editable username (text with validation) -->
+                        <span data-id="{{ user._id }}" editable-text="user.ref" e-form="tableform" >
+                            {{ user.ref || 'empty' }}
+                        </span>
+                    </td>
+                    <td>
+                        <span colorpicker e-form="tableform" style="display:block; background-color:{{ user.backcolor }}; width:100px; height:20px; border:1px solid #000000;" ng-model="user.backcolor">&nbsp;</span>
+                    </td>
+                    <td>
+                        <span colorpicker e-form="tableform" style="display:block; background-color:{{ user.forecolor }}; width:100px; height:20px; border:1px solid #000000;" ng-model="user.forecolor">&nbsp;</span>
+                    </td>
+                    <td><button type="button" ng-show="tableform.$visible" ng-click="deleteUser(user.id)" class="btn btn-danger pull-right">Del</button></td>
+                </tr>
+            </table>
 
-                </div>
-    		</div>
-    		<div class="col-md-4">
-    			<div colorpicker class="col-header"><span style="display:block; border:1px solid #ccc; background-color:{{ s.forecolor }}; width:100px; height:20px;">&nbsp;</span></div>
-    		</div>
-    	</div>
+            <!-- buttons -->
+            <div class="btn-edit">
+                <button type="button" class="btn btn-default" ng-show="!tableform.$visible" ng-click="tableform.$show()">
+                    edit
+                </button>
+            </div>
+            <div class="btn-form" ng-show="tableform.$visible">
+                <button type="button" ng-disabled="tableform.$waiting" ng-click="addUser()" class="btn btn-default pull-right">add row</button>
+                <button type="submit" ng-disabled="tableform.$waiting" class="btn btn-primary">save</button>
+                <button type="button" ng-disabled="tableform.$waiting" ng-click="tableform.$cancel()" class="btn btn-default">cancel</button>
+            </div>
+        </form>
     </div>
     <div class="col-md-2"></div>
 </div>
